--- a/Client/client/package.json
+++ b/Client/client/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "font-awesome": "^4.7.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-fontawesome": "^1.7.1",
     "react-scripts": "3.3.0"
   },
   "scripts": {
