--- a/Client/client/package.json
+++ b/Client/client/package.json
@@ -8,6 +8,7 @@
     "font-awesome": "^4.7.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.1.2",
