--- a/Client/client/package.json
+++ b/Client/client/package.json
@@ -11,8 +11,11 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-fontawesome": "^1.7.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
