--- a/Client/client/package.json
+++ b/Client/client/package.json
@@ -11,6 +11,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-fontawesome": "^1.7.1",
+    "react-hooks-helper": "^1.6.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
