--- a/Client/client/package.json
+++ b/Client/client/package.json
@@ -13,6 +13,7 @@
     "react-fontawesome": "^1.7.1",
     "react-hooks-helper": "^1.6.0",
     "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
