--- a/Client/client/package.json
+++ b/Client/client/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-toast-notifications": "^2.4.0",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
